Fixed slide-menu scroll issue on iOS and iPadOS

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 
 html, body {
     overflow-x: hidden;
-    background-color: rgb(44, 44, 44);
+    /* background-color: rgb(44, 44, 44); */
+    background-color: black;
 }
 
 *::-webkit-scrollbar {
